--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Swifty application build with Electron",
   "repository": "",
   "dependencies": {
-    "nucleon": "file:../nucleon"
+    "cryptr": "^4.0.2",
+    "electron": "6.0.0-beta.11",
+    "nucleon": "file:../nucleon",
+    "shortid": "^2.2.14"
   },
   "author": {
     "name": "Alex Chaplinsky",
@@ -12,7 +15,6 @@
   },
   "devDependencies": {
     "bozon": "0.9.4",
-    "electron": "6.0.0-beta.11",
     "mocha": "^6.1.4",
     "spectron": "^5.0.0"
   },
