--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Swifty application build with Electron",
   "repository": "",
   "dependencies": {
+    "classnames": "^2.2.6",
     "cryptr": "^4.0.2",
     "electron": "6.0.0-beta.11",
     "nucleon": "file:../nucleon",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "shortid": "^2.2.14"
   },
   "author": {
