--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^3.0.0",
     "mocha": "^6.1.4",
     "node-sass": "^4.12.0",
+    "react-svg-loader": "^3.0.3",
     "sass-loader": "^7.1.0",
     "spectron": "^5.0.0",
     "style-loader": "^0.23.1"
