--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Swifty application build with Electron",
   "repository": "",
   "dependencies": {
+    "add": "^2.0.6",
     "classnames": "^2.2.6",
     "cryptr": "^4.0.2",
     "electron": "6.0.0-beta.11",
@@ -11,7 +12,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
-    "redux": "^4.0.1",
+    "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.14"
   },
@@ -20,8 +21,8 @@
     "email": ""
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/core": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "bozon": "0.9.4",
@@ -30,7 +31,7 @@
     "node-sass": "^4.12.0",
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^7.1.0",
-    "spectron": "^5.0.0",
+    "spectron": "^7.0.0",
     "style-loader": "^0.23.1"
   },
   "build": {
