--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "classnames": "^2.2.6",
     "cryptr": "^4.0.2",
     "electron": "6.0.0-beta.11",
+    "generate-password": "^1.4.2",
+    "luxon": "^1.17.1",
     "nucleon": "file:../nucleon",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
