--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "css-loader": "^3.0.0",
     "eslint": "^6.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "mocha": "^6.1.4",
     "node-sass": "^4.12.0",
+    "prettier": "^1.18.2",
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^7.1.0",
     "spectron": "^7.0.0",
