--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
+    "file-loader": "^4.0.0",
     "mocha": "^6.1.4",
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
