--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "electron": "6.0.0-beta.11",
     "generate-password": "^1.4.2",
     "luxon": "^1.17.1",
-    "nucleon": "file:../nucleon",
+    "nucleon": "1.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
@@ -30,7 +30,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
-    "bozon": "0.9.4",
+    "bozon": "^0.10.0",
     "css-loader": "^3.0.0",
     "eslint": "^6.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
