--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "shortid": "^2.2.14"
   },
   "scripts": {
-    "lint": "npx eslint --color src/javascripts"
+    "lint": "npx eslint --color src",
+    "test": "yarn lint && bozon test"
   },
   "author": {
     "name": "Alex Chaplinsky",
