Update test command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,4 +34,5 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       # run tests!
-      - run: yarn test
+      - run: yarn lint
+      - run: xvfb-run -a npx bozon start & xvfb-run -a npx bozon test
