--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "electron": "6.0.0-beta.11",
     "generate-password": "^1.4.2",
     "luxon": "^1.17.1",
-    "nucleon": "1.0.3",
+    "nucleon": "^1.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
@@ -34,7 +34,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "css-loader": "^3.1.0",
-    "eslint": "^6.0.1",
+    "eslint": "^6.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
