--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Swifty",
-  "version": "0.1.0",
-  "description": "Swifty application build with Electron",
-  "repository": "",
+  "version": "0.1.1",
+  "description": "Modern, Lightweight, Fast and Free Password Manager",
+  "repository": "https://github.com/alchaplinsky/swifty.git",
   "dependencies": {
     "classnames": "^2.2.6",
     "cryptr": "^4.0.2",
