--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate-password": "^1.4.2",
     "luxon": "^1.17.2",
     "nucleon": "^1.0.5",
+    "parse-domain": "^2.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
