Fix linux and windows icons and update build

--- a/package.json
+++ b/package.json
@@ -52,7 +52,12 @@
     "win": {
       "publish": null
     },
+    "linux": {
+      "category": "Utilities",
+      "target": ["deb", "rpm"]
+    },
     "mac": {
+      "icon": "build/icon.icns",
       "publish": [
         {
           "provider": "github",
