--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.2.6",
     "cryptr": "^4.0.2",
     "generate-password": "^1.4.2",
+    "googleapis": "39",
     "luxon": "^1.17.2",
     "nucleon": "^1.0.5",
     "parse-domain": "^2.3.1",
@@ -54,7 +55,10 @@
     },
     "linux": {
       "category": "Utilities",
-      "target": ["deb", "rpm"]
+      "target": [
+        "deb",
+        "rpm"
+      ]
     },
     "mac": {
       "icon": "build/icon.icns",
