--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "Swifty",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Modern, Lightweight, Fast and Free Password Manager",
   "repository": "https://github.com/alchaplinsky/swifty.git",
   "dependencies": {
     "classnames": "^2.2.6",
     "cryptr": "^4.0.2",
     "dotenv": "^8.0.0",
+    "dotenv-webpack": "^1.7.0",
     "generate-password": "^1.4.2",
     "googleapis": "^42.0.0",
     "luxon": "^1.17.2",
