--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "cryptr": "^4.0.2",
     "dotenv": "^8.1.0",
     "dotenv-webpack": "^1.7.0",
+    "electron-log": "^3.0.7",
+    "electron-unhandled": "^3.0.0",
+    "electron-util": "^0.12.1",
     "generate-password": "^1.4.2",
     "googleapis": "^42.0.0",
     "luxon": "^1.17.2",
