Fix test running

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "generate-password": "^1.4.2",
     "googleapis": "^42.0.0",
     "luxon": "^1.17.2",
-    "nucleon": "^1.0.6",
+    "nucleon": "^1.0.8",
     "parse-domain": "^2.3.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -41,11 +41,12 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "css-loader": "^3.2.0",
-    "eslint": "^6.2.2",
+    "eslint": "^6.3.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "file-loader": "^4.2.0",
+    "find-process": "^1.4.2",
     "mocha": "^6.2.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
