--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "file-loader": "^4.2.0",
-    "find-process": "^1.4.2",
     "mocha": "^6.2.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
+    "ps-node": "^0.1.6",
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^8.0.0",
     "spectron": "^8.0.0",
