Update ci test command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,4 +35,5 @@ jobs:
 
       # run tests!
       - run: yarn lint
-      - run: xvfb-run -a npx bozon start & xvfb-run -a npx bozon test
+      - run: npx jest test/units
+      - run: xvfb-run -a npx bozon start & xvfb-run -a npx bozon test test/features
