--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "electron-log": "^3.0.7",
     "electron-unhandled": "^3.0.0",
     "electron-util": "^0.12.1",
+    "fs-extra": "^8.1.0",
     "generate-password": "^1.4.2",
     "googleapis": "^42.0.0",
     "luxon": "^1.17.2",
