Disable reload via shortcuts

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "generate-password": "^1.4.2",
     "googleapis": "^43.0.0",
     "luxon": "^1.17.2",
-    "nucleon": "^1.0.9",
+    "mousetrap": "^1.6.3",
+    "nucleon": "^1.0.10",
     "parse-domain": "^2.3.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
