--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^8.1.0",
     "dotenv-webpack": "^1.7.0",
+    "electron": "^6.0.9",
     "electron-log": "^3.0.7",
     "electron-unhandled": "^3.0.0",
     "electron-util": "^0.12.1",
@@ -16,7 +17,7 @@
     "googleapis": "^43.0.0",
     "luxon": "^1.17.2",
     "mousetrap": "^1.6.3",
-    "nucleon": "^1.0.10",
+    "nucleon": "^1.0.11",
     "parse-domain": "^2.3.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
