--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-GOOGLE_OAUTH_CLIENT_ID = google-api-client-key
-GOOGLE_OAUTH_CLIENT_SECRET = google-api-client-secret
+APP_ENV=development
+GOOGLE_OAUTH_CLIENT_ID=google-api-client-key
+GOOGLE_OAUTH_CLIENT_SECRET=google-api-client-secret
