--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mousetrap": "^1.6.3",
     "nucleon": "^1.0.13",
     "parse-domain": "^2.3.2",
+    "password-validator": "^5.0.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
