--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "fs-extra": "^8.1.0",
     "generate-password": "^1.4.2",
     "googleapis": "^43.0.0",
-    "luxon": "^1.17.3",
+    "luxon": "^1.18.0",
     "mousetrap": "^1.6.3",
     "nucleon": "^1.0.13",
     "parse-domain": "^2.3.2",
@@ -22,6 +22,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
+    "react-tagsinput": "^3.19.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.15"
