--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Swifty",
-  "version": "0.4.0-beta.2",
+  "version": "0.4.0",
   "description": "Modern, Lightweight, Fast and Free Password Manager",
   "repository": "https://github.com/alchaplinsky/swifty.git",
   "dependencies": {
