--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs-extra": "^8.1.0",
     "generate-password": "^1.5.1",
     "googleapis": "^47.0.0",
+    "lodash": "^4.17.15",
     "luxon": "^1.22.0",
     "mousetrap": "^1.6.5",
     "nucleon": "^1.0.16",
