--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "spectron": "^10.0.1",
     "style-loader": "^1.1.3"
   },
+  "resolutions": {
+    "minimist": "^1.2.5"
+  },
   "build": {
     "appId": "com.electron.swifty",
     "fileAssociations": [
