Add updated_at field to vault file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly",
-    "CONFIG": "readonly"
+    "CONFIG": "readonly",
+    "mockDate": "readonly"
   },
   "parserOptions": {
     "ecmaFeatures": {
