--- a/package.json
+++ b/package.json
@@ -1,102 +1,108 @@
 {
-	"name": "Swifty",
-	"version": "0.4.4",
-	"description": "Modern, Lightweight, Fast and Free Password Manager",
-	"repository": "https://github.com/alchaplinsky/swifty.git",
-	"dependencies": {
-		"@swiftyapp/cryptor": "^1.0.4",
-		"classnames": "^2.2.6",
-		"dotenv-webpack": "^1.7.0",
-		"electron": "^8.2.0",
-		"electron-log": "^4.1.0",
-		"electron-unhandled": "^3.0.2",
-		"electron-util": "^0.14.0",
-		"fs-extra": "^8.1.0",
-		"generate-password": "^1.5.1",
-		"googleapis": "^48.0.0",
-		"lodash": "^4.17.15",
-		"luxon": "^1.22.0",
-		"mousetrap": "^1.6.5",
-		"nucleon": "^1.0.17",
-		"parse-domain": "^2.3.4",
-		"password-validator": "^5.0.3",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-redux": "^7.2.0",
-		"react-tagsinput": "^3.19.0",
-		"redux": "^4.0.5",
-		"redux-thunk": "^2.3.0",
-		"shortid": "^2.2.15"
-	},
-	"scripts": {
-		"lint": "npx eslint --color src",
-		"start": "NODE_ENV=development bozon start",
-		"test": "yarn lint && NODE_ENV=test npx jest test/units && NODE_ENV=test bozon test test/features"
-	},
-	"author": {
-		"name": "Alex Chaplinsky",
-		"email": "alchaplinsky@gmail.com"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.9.0",
-		"@babel/node": "^7.8.7",
-		"@babel/preset-env": "^7.9.0",
-		"@babel/preset-react": "^7.9.4",
-		"babel-jest": "^25.1.0",
-		"babel-loader": "^8.1.0",
-		"bozon": "^0.10.8",
-		"chai": "^4.2.0",
-		"chai-as-promised": "^7.1.1",
-		"css-loader": "^3.4.2",
-		"eslint": "^6.8.0",
-		"eslint-plugin-jest": "^23.8.2",
-		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-prettier": "^3.1.2",
-		"eslint-plugin-react": "^7.19.0",
-		"file-loader": "^6.0.0",
-		"jest": "^25.1.0",
-		"mocha": "^7.1.1",
-		"node-sass": "^4.13.1",
-		"prettier": "^2.0.2",
-		"ps-node": "^0.1.6",
-		"react-svg-loader": "^3.0.3",
-		"sass-loader": "^8.0.2",
-		"spectron": "^10.0.1",
-		"style-loader": "^1.1.3"
-	},
-	"resolutions": {
-		"acorn": "^7.1.1",
-		"minimist": "^1.2.5",
-		"kind-of": "^6.0.3",
-		"js-yaml": "^3.13.1"
-	},
-	"build": {
-		"appId": "com.electron.swifty",
-		"fileAssociations": [
-			{
-				"ext": "swftx",
-				"role": "None",
-				"icon": "build/fileicon.icns",
-				"mimeType": "application/vnd.swftx"
-			}
-		],
-		"publish": [
-			{
-				"provider": "github",
-				"owner": "alchaplinsky",
-				"repo": "swifty"
-			}
-		],
-		"win": {
-			"icon": "build/icon.ico"
-		},
-		"linux": {
-			"category": "Utilities",
-			"target": [ "deb", "rpm", "AppImage" ]
-		},
-		"mac": {
-			"icon": "build/icon.icns",
-			"category": "your.app.category.type"
-		}
-	}
+  "name": "Swifty",
+  "version": "0.4.4",
+  "description": "Modern, Lightweight, Fast and Free Password Manager",
+  "repository": "https://github.com/alchaplinsky/swifty.git",
+  "dependencies": {
+    "@swiftyapp/cryptor": "^1.0.4",
+    "classnames": "^2.2.6",
+    "dotenv-webpack": "^1.7.0",
+    "electron": "^8.2.0",
+    "electron-log": "^4.1.1",
+    "electron-unhandled": "^3.0.2",
+    "electron-util": "^0.14.0",
+    "fs-extra": "^8.1.0",
+    "generate-password": "^1.5.1",
+    "googleapis": "^48.0.0",
+    "lodash": "^4.17.15",
+    "luxon": "^1.22.2",
+    "mousetrap": "^1.6.5",
+    "nucleon": "^1.0.17",
+    "parse-domain": "^2.3.4",
+    "password-validator": "^5.0.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-tagsinput": "^3.19.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.15"
+  },
+  "scripts": {
+    "lint": "npx eslint --color src",
+    "start": "NODE_ENV=development bozon  start",
+    "test": "yarn lint && yarn test:unit && yarn test:features",
+    "test:unit": "NODE_ENV=test npx jest test/units",
+    "test:features": "NODE_ENV=test bozon test test/features"
+  },
+  "author": {
+    "name": "Alex Chaplinsky",
+    "email": "alchaplinsky@gmail.com"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "babel-jest": "^25.2.4",
+    "babel-loader": "^8.1.0",
+    "bozon": "^1.0.0-alpha.6",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "file-loader": "^6.0.0",
+    "jest": "^25.2.4",
+    "mocha": "^7.1.1",
+    "node-sass": "^4.13.1",
+    "prettier": "^2.0.2",
+    "ps-node": "^0.1.6",
+    "react-svg-loader": "^3.0.3",
+    "sass-loader": "^8.0.2",
+    "spectron": "^10.0.1",
+    "style-loader": "^1.1.3"
+  },
+  "resolutions": {
+    "acorn": "^7.1.1",
+    "minimist": "^1.2.5",
+    "kind-of": "^6.0.3",
+    "js-yaml": "^3.13.1"
+  },
+  "build": {
+    "appId": "com.electron.swifty",
+    "fileAssociations": [
+      {
+        "ext": "swftx",
+        "role": "None",
+        "icon": "build/fileicon.icns",
+        "mimeType": "application/vnd.swftx"
+      }
+    ],
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "alchaplinsky",
+        "repo": "swifty"
+      }
+    ],
+    "win": {
+      "icon": "build/icon.ico"
+    },
+    "linux": {
+      "category": "Utilities",
+      "target": [
+        "deb",
+        "rpm",
+        "AppImage"
+      ]
+    },
+    "mac": {
+      "icon": "build/icon.icns",
+      "category": "your.app.category.type"
+    }
+  }
 }
