--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "dependencies": {
     "@swiftyapp/cryptor": "^1.0.4",
     "classnames": "^2.2.6",
-    "dotenv-webpack": "^1.7.0",
-    "electron": "^8.2.0",
     "electron-log": "^4.1.1",
     "electron-unhandled": "^3.0.2",
     "electron-util": "^0.14.0",
@@ -30,10 +28,10 @@
   },
   "scripts": {
     "lint": "npx eslint --color src",
-    "start": "NODE_ENV=development bozon  start",
+    "start": "NODE_ENV=development bozon start",
     "test": "yarn lint && yarn test:unit && yarn test:features",
     "test:unit": "NODE_ENV=test npx jest test/units",
-    "test:features": "NODE_ENV=test bozon test test/features"
+    "test:features": "NODE_ENV=test ../../Railsware/bozon/bin/bozon test test/features"
   },
   "author": {
     "name": "Alex Chaplinsky",
@@ -46,10 +44,12 @@
     "@babel/preset-react": "^7.9.4",
     "babel-jest": "^25.2.4",
     "babel-loader": "^8.1.0",
-    "bozon": "^1.0.0-alpha.6",
+    "bozon": "^1.0.0-alpha.7",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "css-loader": "^3.4.2",
+    "dotenv-webpack": "^1.7.0",
+    "electron": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
