--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "generate-password": "^1.5.1",
     "googleapis": "^48.0.0",
     "lodash": "^4.17.15",
-    "luxon": "^1.22.2",
+    "luxon": "^1.23.0",
     "mousetrap": "^1.6.5",
     "nucleon": "^1.0.17",
     "parse-domain": "^2.3.4",
@@ -31,7 +31,7 @@
     "start": "NODE_ENV=development bozon start",
     "test": "yarn lint && yarn test:unit && yarn test:features",
     "test:unit": "NODE_ENV=test npx jest test/units",
-    "test:features": "NODE_ENV=test ../../Railsware/bozon/bin/bozon test test/features"
+    "test:features": "NODE_ENV=test bozon test test/features"
   },
   "author": {
     "name": "Alex Chaplinsky",
@@ -42,9 +42,9 @@
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
-    "babel-jest": "^25.2.4",
+    "babel-jest": "^25.2.6",
     "babel-loader": "^8.1.0",
-    "bozon": "^1.0.0-alpha.7",
+    "bozon": "^1.0.0-alpha.8",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "css-loader": "^3.4.2",
@@ -56,7 +56,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^6.0.0",
-    "jest": "^25.2.4",
+    "jest": "^25.2.7",
     "mocha": "^7.1.1",
     "node-sass": "^4.13.1",
     "prettier": "^2.0.2",
