--- a/package.json
+++ b/package.json
@@ -59,12 +59,13 @@
     "jest": "^25.2.7",
     "mocha": "^7.1.1",
     "node-sass": "^4.13.1",
-    "prettier": "^2.0.2",
+    "prettier": "^2.0.3",
     "ps-node": "^0.1.6",
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^8.0.2",
     "spectron": "^10.0.1",
-    "style-loader": "^1.1.3"
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.1"
   },
   "resolutions": {
     "acorn": "^7.1.1",
