--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@babel/preset-react": "^7.9.4",
     "babel-jest": "^25.3.0",
     "babel-loader": "^8.1.0",
-    "bozon": "^1.0.0-alpha.8",
+    "bozon": "1.0.0-alpha.10",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "css-loader": "^3.5.1",
