--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "classnames": "^2.2.6",
     "electron-log": "^4.1.1",
     "electron-unhandled": "^3.0.2",
-    "electron-util": "^0.14.0",
+    "electron-util": "^0.14.1",
     "fs-extra": "^8.1.0",
     "generate-password": "^1.5.1",
     "googleapis": "^48.0.0",
@@ -44,16 +44,16 @@
     "@babel/preset-react": "^7.9.4",
     "babel-jest": "^25.3.0",
     "babel-loader": "^8.1.0",
-    "bozon": "1.0.0-alpha.10",
+    "bozon": "^1.0.0-beta.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "css-loader": "^3.5.1",
+    "css-loader": "^3.5.2",
     "dotenv-webpack": "^1.7.0",
-    "electron": "^8.2.1",
+    "electron": "^8.2.2",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^6.0.0",
     "jest": "^25.3.0",
