--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@babel/preset-react": "^7.9.4",
     "babel-jest": "^25.3.0",
     "babel-loader": "^8.1.0",
-    "bozon": "^1.0.0-beta.1",
+    "bozon": "^1.0.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "css-loader": "^3.5.2",
@@ -64,7 +64,7 @@
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^8.0.2",
     "spectron": "^10.0.1",
-    "style-loader": "^1.1.3",
+    "style-loader": "^1.1.4",
     "webpack": "^4.42.1"
   },
   "resolutions": {
