--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "repository": "https://github.com/alchaplinsky/swifty.git",
   "dependencies": {
     "@swiftyapp/cryptor": "^1.0.4",
+    "babel": "^6.23.0",
     "classnames": "^2.2.6",
     "electron-log": "^4.1.1",
     "electron-unhandled": "^3.0.2",
     "electron-util": "^0.14.1",
     "fs-extra": "^9.0.0",
     "generate-password": "^1.5.1",
-    "googleapis": "^48.0.0",
+    "googleapis": "^49.0.0",
     "lodash": "^4.17.15",
     "luxon": "^1.23.0",
     "mousetrap": "^1.6.5",
     "nucleon": "^1.0.17",
-    "parse-domain": "^2.3.4",
+    "parse-domain": "^3.0.0",
     "password-validator": "^5.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -42,30 +43,30 @@
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
-    "babel-jest": "^25.3.0",
+    "babel-jest": "^25.4.0",
     "babel-loader": "^8.1.0",
     "bozon": "^1.0.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "css-loader": "^3.5.2",
     "dotenv-webpack": "^1.7.0",
-    "electron": "^8.2.2",
+    "electron": "^8.2.3",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^6.0.0",
-    "jest": "^25.3.0",
+    "jest": "^25.4.0",
     "mocha": "^7.1.1",
-    "node-sass": "^4.13.1",
-    "prettier": "^2.0.4",
+    "node-sass": "^4.14.0",
+    "prettier": "^2.0.5",
     "ps-node": "^0.1.6",
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^8.0.2",
     "spectron": "^10.0.1",
     "style-loader": "^1.1.4",
-    "webpack": "^4.42.1"
+    "webpack": "^4.43.0"
   },
   "resolutions": {
     "acorn": "^7.1.1",
