--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@swiftyapp/cryptor": "^1.0.4",
     "classnames": "^2.2.6",
-    "electron-log": "^4.1.1",
+    "electron-log": "^4.1.2",
     "electron-unhandled": "^3.0.2",
     "electron-util": "^0.14.1",
     "fs-extra": "^9.0.0",
@@ -25,6 +25,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.15",
+    "speakeasy": "^2.0.0",
     "universal-analytics": "^0.4.20"
   },
   "scripts": {
