--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fs-extra": "^9.0.0",
     "generate-password": "^1.5.1",
     "googleapis": "^51.0.0",
+    "js-yaml": "^3.14.0",
     "lodash": "^4.17.15",
     "luxon": "^1.24.1",
     "mousetrap": "^1.6.5",
@@ -51,7 +52,7 @@
     "css-loader": "^3.5.3",
     "dotenv-webpack": "^1.8.0",
     "electron": "^9.0.0",
-    "eslint": "^7.0.0",
+    "eslint": "^7.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
