--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@swiftyapp/cryptor": "^1.1.0",
     "classnames": "^2.2.6",
-    "electron-log": "^4.2.3",
+    "electron-log": "^4.2.4",
     "electron-unhandled": "^3.0.2",
     "electron-util": "^0.14.2",
     "eslint-plugin-jest": "^23.20.0",
@@ -54,9 +54,9 @@
     "eslint": "^7.6.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react": "^7.20.6",
     "file-loader": "^6.0.0",
-    "jest": "^26.3.0",
+    "jest": "^26.4.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
     "react-svg-loader": "^3.0.3",
@@ -67,7 +67,8 @@
   },
   "resolutions": {
     "minimist": "^1.2.5",
-    "js-yaml": "^3.14.0"
+    "js-yaml": "^3.14.0",
+    "serialize-javascript": "^3.1.0"
   },
   "build": {
     "appId": "com.electron.swifty",
