Add publisher name for windows build

--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
       }
     ],
     "win": {
-      "icon": "build/icon.ico"
+      "icon": "build/icon.ico",
+      "publisherName": "Developer ID Application: Oleksandr Chaplinsky (UFBL3F444A)"
     },
     "linux": {
       "category": "Utilities",
