--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "file-loader": "^6.1.0",
     "jest": "^26.4.2",
     "node-sass": "^4.14.1",
-    "prettier": "^2.1.1",
+    "prettier": "^2.1.2",
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^10.0.2",
     "spectron": "^11.0.0",
@@ -68,6 +68,7 @@
   "resolutions": {
     "bl": "^4.0.3",
     "minimist": "^1.2.5",
+    "node-forge": "^0.10.0",
     "js-yaml": "^3.14.0",
     "yargs-parser": "^20.0.0",
     "serialize-javascript": "^5.0.1"
