--- a/package.json
+++ b/package.json
@@ -43,23 +43,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
-    "@babel/node": "^7.12.1",
+    "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
-    "babel-jest": "^26.6.2",
-    "babel-loader": "^8.1.0",
+    "@babel/preset-react": "^7.12.5",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.1",
     "bozon": "^1.1.1",
-    "css-loader": "^5.0.0",
+    "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^2.0.0",
     "electron": "^10.1.5",
-    "eslint": "^7.12.1",
+    "eslint": "^7.13.0",
     "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "file-loader": "^6.2.0",
-    "jest": "^26.6.2",
+    "jest": "^26.6.3",
     "node-sass": "^5.0.0",
     "prettier": "^2.1.2",
     "react-svg-loader": "^3.0.3",
@@ -111,7 +111,11 @@
       "category": "public.app-category.utilities",
       "hardenedRuntime": true,
       "entitlements": "build/entitlements.mac.plist",
-      "entitlementsInherit": "build/entitlements.mac.plist"
+      "entitlementsInherit": "build/entitlements.mac.plist",
+      "target": [
+        "dmg",
+        "mas"
+      ]
     }
   }
 }
