--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jest": "^26.6.3",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
+    "ps-node": "^0.1.6",
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^10.1.0",
     "spectron": "^13.0.0",
