Add zip target to mac build

--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
       "entitlementsInherit": "build/entitlements.mac.plist",
       "target": [
         "dmg",
+        "zip",
         "mas"
       ]
     }
