--- a/package.json
+++ b/package.json
@@ -42,19 +42,19 @@
     "email": "alchaplinsky@gmail.com"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/core": "^7.13.8",
+    "@babel/node": "^7.13.0",
+    "@babel/preset-env": "^7.13.8",
+    "@babel/preset-react": "^7.12.13",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "bozon": "^1.1.3",
-    "css-loader": "^5.0.1",
+    "css-loader": "^5.1.0",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^2.0.0",
     "electron": "^11.2.1",
-    "eslint": "^7.18.0",
-    "eslint-plugin-jest": "^24.1.3",
+    "eslint": "^7.20.0",
+    "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
@@ -95,7 +95,8 @@
     ],
     "win": {
       "icon": "build/icon.ico",
-      "publisherName": "Developer ID Application: Oleksandr Chaplinsky (UFBL3F444A)"
+      "publisherName": "Developer ID Application: Oleksandr Chaplinsky (UFBL3F444A)",
+      "verifyUpdateCodeSignature": false
     },
     "linux": {
       "category": "Utilities",
