--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "bozon": "^1.2.1",
+    "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.0",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^7.0.2",
