--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:15.5.1-browsers
+      - image: cimg/node:16.1.0-browsers
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
