--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "electron-util": "^0.16.0",
     "fs-extra": "^10.0.0",
     "generate-password": "^1.6.0",
-    "googleapis": "^73.0.0",
+    "googleapis": "^76.0.0",
     "lodash": "^4.17.21",
     "luxon": "^1.27.0",
     "mousetrap": "^1.6.5",
@@ -49,9 +49,9 @@
     "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
     "bozon": "^1.2.5",
-    "copy-webpack-plugin": "^8.1.1",
+    "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
-    "dotenv": "^9.0.2",
+    "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
     "electron": "^13.1.2",
     "eslint": "^7.28.0",
@@ -65,7 +65,7 @@
     "prettier": "^2.3.1",
     "ps-node": "^0.1.6",
     "react-svg-loader": "^3.0.3",
-    "sass-loader": "^11.1.1",
+    "sass-loader": "^12.1.0",
     "spectron": "^15.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.38.1"
@@ -77,6 +77,7 @@
     "yargs-parser": "^20.2.7",
     "lodash": "^4.17.21",
     "serialize-javascript": "^5.0.1",
+    "trim-newlines": "3.0.1",
     "xmldom": ">=0.6.0"
   },
   "build": {
