--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   },
   "resolutions": {
     "js-yaml": "^3.14.1",
+    "json-schema": "^0.4.0",
     "yargs-parser": "^20.2.9",
     "xmldom": "xmldom/xmldom#0.7.0"
   },
