--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Modern, Lightweight, Fast and Free Password Manager",
   "repository": "https://github.com/alchaplinsky/swifty.git",
   "dependencies": {
-    "@swiftyapp/cryptor": "^1.1.1",
+    "@swiftyapp/cryptor": "^1.1.2",
     "classnames": "^2.3.1",
-    "electron-log": "^4.4.1",
+    "electron-log": "^4.4.4",
     "electron-notarize": "^1.1.1",
     "electron-unhandled": "^3.0.2",
     "electron-util": "^0.17.2",
@@ -42,10 +42,10 @@
     "email": "alchaplinsky@gmail.com"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/node": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
+    "@babel/core": "^7.16.7",
+    "@babel/node": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
     "bozon": "^1.2.7",
@@ -54,17 +54,17 @@
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
     "electron": "^13.5.2",
-    "eslint": "^8.4.1",
-    "eslint-plugin-jest": "^25.3.0",
+    "eslint": "^8.6.0",
+    "eslint-plugin-jest": "^25.3.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react": "^7.28.0",
     "file-loader": "^6.2.0",
-    "jest": "^27.4.4",
-    "node-sass": "^7.0.0",
+    "jest": "^27.4.5",
     "prettier": "^2.5.1",
     "ps-node": "^0.1.6",
     "react-svg-loader": "^3.0.3",
+    "sass": "^1.45.2",
     "sass-loader": "^12.4.0",
     "spectron": "^15.0.0",
     "style-loader": "^3.3.1",
