Add icon for linux build

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     },
     "linux": {
       "category": "Utility",
+      "icon": "build/icon.png",
       "target": [
         "deb",
         "rpm",
