--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,4 +37,4 @@ jobs:
         run: yarn lint
 
       - name: Test
-        run: NODE_ENV=test npx jest test/units && NODE_ENV=test xvfb-run --auto-servernum npx bozon test test/features
+        run: NODE_ENV=test npx jest test/units #&& NODE_ENV=test xvfb-run --auto-servernum npx bozon test test/features
