Update notarization script

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 APP_ENV=development
 GOOGLE_OAUTH_CLIENT_ID=google-api-client-key
 GOOGLE_OAUTH_CLIENT_SECRET=google-api-client-secret
+NOTARIZE_TOOL=notarytool
+MAC_APP_PATH='~/swifty/packages/mac-arm64/Swifty.app'
+APPLEID=apple-id
+APPLEIDPASSWORD=apple-one-time-pass
+APPLETEAMID=apple-team-id
