Include 1.0.0 branch to workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [master]
+    branches: [master, 1.0.0]
   pull_request:
-    branches: [master]
+    branches: [master, 1.0.0]
 
 jobs:
   build:
