--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Modern, Lightweight, Fast and Free Password Manager",
   "repository": "https://github.com/alchaplinsky/swifty.git",
   "dependencies": {
+    "@swiftyapp/aes-256-gcm": "^1.0.1",
     "@swiftyapp/cryptor": "^1.1.2",
+    "@swiftyapp/vault": "^0.1.0",
     "classnames": "^2.3.1",
     "electron-log": "^4.4.4",
     "electron-notarize": "^1.1.1",
