Replace cryptor algorithm

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ MAC_APP_PATH='~/swifty/packages/mac-arm64/Swifty.app'
 APPLEID=apple-id
 APPLEIDPASSWORD=apple-one-time-pass
 APPLETEAMID=apple-team-id
+LEGACY_VAULT_PATH=/Users/[user]/Library/Application Support/Swifty/vault_development.swftx
+VAULTS_PATH=/Users/[user]/Library/Application Support/Swifty/vaults
