--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,5 @@
 APP_ENV=test
+LEGACY_VAULT_PATH=./test/.storage/default.swftx
+VAULTS_PATH=./test/.storage/
 GOOGLE_OAUTH_CLIENT_ID=google-api-client-key
 GOOGLE_OAUTH_CLIENT_SECRET=google-api-client-secret
