--- a/package.json
+++ b/package.json
@@ -71,8 +71,13 @@
     "webpack": "^5.67.0"
   },
   "resolutions": {
+    "ansi-regex": ">=5.0.1",
     "js-yaml": "^3.14.1",
     "json-schema": "^0.4.0",
+    "nanoid": "^3.1.23",
+    "node-fetch": ">=2.6.7",
+    "node-forge": ">=1.0.0",
+    "nth-check": ">=2.0.1",
     "yargs-parser": "^20.2.9",
     "xmldom": "xmldom/xmldom#0.7.0"
   },
