--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "lodash": "^4.17.21",
     "luxon": "^2.3.2",
     "mousetrap": "^1.6.5",
+    "nth-check": "^2.1.1",
     "nucleon": "^1.0.21",
-    "parse-domain": "^7.0.0",
-    "password-validator": "^5.2.1",
+    "parse-domain": "^7.0.1",
+    "password-validator": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-tagsinput": "^3.19.0",
-    "redux": "^4.1.2",
+    "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "remove": "^0.1.5",
     "shortid": "^2.2.16",
@@ -64,8 +65,8 @@
     "prettier": "^2.7.1",
     "ps-node": "^0.1.6",
     "react-svg-loader": "^3.0.3",
-    "sass": "^1.52.3",
-    "sass-loader": "^12.6.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "spectron": "^15.0.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0"
