Update github package action

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -8,4 +8,10 @@ jobs:
   package-macos-application:
     runs-on: macos-latest
     steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
+      - run: yarn install
+      - run: yarn global add bozon
       - run: echo "⚙️ Building MacOS application"
