--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -4,6 +4,15 @@ on:
   push:
     branches: [release]
 
+env:
+  NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+  NOTARIZE_TOOL: notarytool
+  APPLEID: ${{ secrets.APPLE_ID }}
+  APPLEIDPASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
+  APPLETEAMID: ${{ secrets.APPLE_TEAM_ID }}
+  GOOGLE_OAUTH_CLIENT_ID: ${{ secrets.GOOGLE_OAUTH_CLIENT_ID }}
+  GOOGLE_OAUTH_CLIENT_SECRET: ${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }}
+
 jobs:
   package-macos-application:
     runs-on: macos-latest
@@ -12,6 +21,17 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
-      - run: yarn install
-      - run: yarn global add bozon
-      - run: echo "⚙️ Building MacOS application"
+
+      - uses: apple-actions/import-codesign-certs@v1
+        with:
+          p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
+          p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
+
+      - name: Install project dependencies
+        run: yarn install
+
+      - name: Install bozon
+        run: yarn global add bozon
+
+      - name: 👷‍♂️ Building MacOS application
+        run: bozon package mac
