--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -6,6 +6,7 @@ on:
 
 env:
   NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+  GH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
   NOTARIZE_TOOL: notarytool
   APPLEID: ${{ secrets.APPLE_ID }}
   APPLEIDPASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
@@ -27,19 +28,16 @@ jobs:
           p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
           p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
 
-      - name: Setup upterm session
-        uses: lhotari/action-upterm@v1
-        with:
-          ## limits ssh access and adds the ssh public key for the user which triggered the workflow
-          limit-access-to-actor: true
-          ## limits ssh access and adds the ssh public keys of the listed GitHub users
-          limit-access-to-users: alchaplinsky
+      # - name: Setup upterm session
+      #   uses: lhotari/action-upterm@v1
+      #   with:
+      #     ## limits ssh access and adds the ssh public key for the user which triggered the workflow
+      #     limit-access-to-actor: true
+      #     ## limits ssh access and adds the ssh public keys of the listed GitHub users
+      #     limit-access-to-users: alchaplinsky
 
       - name: Install project dependencies
         run: yarn install
 
-      - name: Install bozon
-        run: yarn global add bozon
-
       - name: 👷‍♂️ Building MacOS application
-        run: bozon package mac
+        run: ./node_modules/.bin/bozon package mac --publish
