--- a/package.json
+++ b/package.json
@@ -115,7 +115,11 @@
       "hardenedRuntime": true,
       "entitlements": "build/entitlements.mac.plist",
       "entitlementsInherit": "build/entitlements.mac.plist",
-      "target": ["dmg"]
+      "target": [
+        "dmg",
+        "zip",
+        "mas"
+      ]
     }
   }
 }
