--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -17,6 +17,7 @@ env:
 jobs:
   release-windows-application:
     runs-on: ubuntu-latest
+    container: electronuserland/builder:wine
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
