Change when release is heppening

--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -1,8 +1,10 @@
 name: Release Linux App
 
 on:
-  push:
-    branches: [release]
+  pull_request:
+    branches:
+      - master
+    types: [closed]
 
 env:
   NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
