--- a/.github/workflows/release-mac.yml
+++ b/.github/workflows/release-mac.yml
@@ -1,6 +1,8 @@
 name: Release Mac App
 
 on:
+  push:
+    branches: [release]
   pull_request:
     branches:
       - master
@@ -30,13 +32,13 @@ jobs:
           p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
           p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
 
-      # - name: Setup upterm session
-      #   uses: lhotari/action-upterm@v1
-      #   with:
-      #     ## limits ssh access and adds the ssh public key for the user which triggered the workflow
-      #     limit-access-to-actor: true
-      #     ## limits ssh access and adds the ssh public keys of the listed GitHub users
-      #     limit-access-to-users: alchaplinsky
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
+        with:
+          ## limits ssh access and adds the ssh public key for the user which triggered the workflow
+          limit-access-to-actor: true
+          ## limits ssh access and adds the ssh public keys of the listed GitHub users
+          limit-access-to-users: alchaplinsky
 
       - name: Install project dependencies
         run: yarn install
