--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -30,4 +30,4 @@ jobs:
         run: yarn install
 
       - name: 👷‍♂️ Building Linux application
-        run: ./node_modules/.bin/bozon package linux --publish
+        run: yarn bozon package linux --publish
