--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -30,4 +30,4 @@ jobs:
         run: yarn install
 
       - name: 👷‍♂️ Building Windows application
-        run: ./node_modules/.bin/bozon package windows --publish
+        run: yarn bozon package linux --publish
