--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -1,13 +1,14 @@
 name: Release Linux App
 
 on:
+  push:
+    branches: [releases]
   pull_request:
     branches:
       - master
     types: [closed]
 
 env:
-  NODE_ENV: production
   NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
   GH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
   NOTARIZE_TOOL: notarytool
@@ -30,4 +31,4 @@ jobs:
         run: yarn install
 
       - name: 👷‍♂️ Building Linux application
-        run: yarn bozon package linux --publish
+        run: NODE_ENV=production yarn bozon package linux --publish
